# forge-method-core

./: .forge-method.yaml  .forge-workspace.yaml  .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  CONTEXT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  MIGRATION.yaml  README.md  SECURITY.md  agents-md-draft.md  install.ps1  install.sh  pi-green-loop.json  progress.md  rust-analyzer.toml
crates/forge-core-authority/: Cargo.toml
crates/forge-core-authority/src/: attestation.rs  domain_pack_promotion.rs  domain_pack_supply_chain.rs  execution_handoff.rs  lib.rs  principal_registry.rs  workflow_authority.rs  workflow_broker_control.rs  workflow_origin_broker.rs  workflow_release_review.rs  workflow_release_review_v2.rs  workflow_retirement.rs
crates/forge-core-authority/tests/: domain_pack_promotion.rs  domain_pack_supply_chain.rs  workflow_release_review.rs  workflow_retirement.rs
crates/forge-core-cli/: Cargo.toml
crates/forge-core-cli/src/: assurance_cmd.rs  autonomy_cmd.rs  backup_cmd.rs  claim.rs  cli_error.rs  cli_util.rs  command_registry.rs  contract_cmd.rs  coordination.rs  cost_cmd.rs  crypto_hashing.rs  crypto_ocsp.rs  crypto_rekor.rs  crypto_sigstore.rs  crypto_slsa_transparency.rs  crypto_tuf.rs  domain_pack_cmd.rs  domain_pack_learning_cmd.rs  effect_index.rs  eval_cmd.rs  eval_harness_cmd.rs  eval_harness_trace.rs  execute_operation.rs  file_io.rs  governance_cmd.rs  graph_cmd.rs  guide.rs  host_adapter_manifest.rs  host_adapter_policy_cmd.rs  host_adapter_projection.rs  host_adapter_types.rs  host_adapter_verification.rs  host_adapter_verify_cmd.rs  host_command.rs  host_support_matrix_cmd.rs  io_util.rs  isolation.rs  lib.rs  m1_cmd.rs  main.rs  (+25 more)
crates/forge-core-cli/tests/: assurance_cli_e2e.rs  autonomy_route_e2e.rs  backup_cli_e2e.rs  bootstrap_consumer_e2e.rs  claim_cli_sidecar_e2e.rs  claim_e2e.rs  claim_handoff_e2e.rs  claim_reconcile_e2e.rs  claim_wal_e2e.rs  claim_wal_stress.rs  claims.rs  claims_authority_e2e.rs  cost_e2e.rs  domain_pack_acquisition_cli_e2e.rs  domain_pack_authoring_cli_e2e.rs  domain_pack_cli_e2e.rs  domain_pack_discovery_cli_e2e.rs  eval_cli_e2e.rs  eval_harness_e2e.rs  execute_operation_risk_audit_e2e.rs  governance_cli_e2e.rs  graph_cli_e2e.rs  guide_e2e.rs  isolation_e2e.rs  m1_cli_e2e.rs  mcp_cli_e2e.rs  mcp_real_client_e2e.rs  mcp_replay_anchor_cli_e2e.rs  mcp_snapshot_cli_e2e.rs  memory_cli_e2e.rs  operation_sidecar_e2e.rs  preflight_profile_e2e.rs  product_lifecycle_recovery_corpus_e2e.rs  project_init_e2e.rs  project_link_hardening_e2e.rs  project_resolve_e2e.rs  r8_binary_boundary.rs  r8_property.rs  research_cli_e2e.rs  restore_cli_e2e.rs  (+15 more)
crates/forge-core-command-surface/: Cargo.toml
crates/forge-core-command-surface/examples/: generate_command_surface_docs.rs
crates/forge-core-command-surface/src/: lib.rs
crates/forge-core-contracts/: Cargo.toml
crates/forge-core-contracts/src/: agent_run.rs  assurance.rs  autonomy_policy.rs  backup_manifest.rs  bootstrap_recovery.rs  catalog.rs  checkpoint.rs  claim.rs  command.rs  common.rs  completion.rs  coordination_eval.rs  decision.rs  domain_pack.rs  domain_pack_acquisition.rs  domain_pack_authoring.rs  domain_pack_discovery.rs  domain_pack_learning.rs  domain_pack_lifecycle.rs  domain_pack_policy.rs  domain_pack_publication.rs  domain_pack_rebase.rs  domain_pack_remote_acquisition.rs  domain_pack_resolution.rs  envelope.rs  eval_run.rs  evidence.rs  execution_principal.rs  funnel_autonomy.rs  gate.rs  governance.rs  guide_decision.rs  guide_protocol.rs  host_capability_result.rs  host_conformance.rs  host_support_matrix.rs  inventory.rs  isolation.rs  lib.rs  markdown_authority.rs  (+28 more)
crates/forge-core-contracts/tests/: bulk_workflow_deserialize.rs  domain_pack_authoring.rs  domain_pack_learning_schema.rs  domain_pack_lifecycle_schema.rs  domain_pack_publication.rs  domain_pack_remote_acquisition.rs  domain_pack_schema.rs  load_current_contracts.rs  post_build_verify_episode.rs  schema_bounds.rs  workflow_behavior_schema.rs  workflow_domain_pack_epoch_schema.rs  workflow_governance_schema.rs  workflow_migration_schema.rs  workflow_policy_overlay_schema.rs  workflow_release_registry_schema.rs  workflow_release_review_schema.rs  workflow_release_schema.rs  workflow_retirement_schema.rs  workflow_schema.rs
crates/forge-core-crypto/: Cargo.toml
crates/forge-core-crypto/benches/: rekor.rs
crates/forge-core-crypto/src/: file_io.rs  hashing.rs  host_adapter_types.rs  host_adapter_verification.rs  host_command.rs  lib.rs  ocsp.rs  rekor.rs  sigstore.rs  slsa_transparency.rs  tuf.rs
crates/forge-core-crypto/tests/: zeroize_smoke.rs
crates/forge-core-decisions/: Cargo.toml
crates/forge-core-decisions/examples/: generate_workflow_agent_native_continuity_admission.rs  generate_workflow_agent_native_continuity_candidate.rs  generate_workflow_agent_native_continuity_evidence.rs  generate_workflow_assurance_operations_admission.rs  generate_workflow_assurance_operations_candidate.rs  generate_workflow_assurance_operations_evidence.rs  generate_workflow_core_assurance_admission.rs  generate_workflow_core_assurance_candidate.rs  generate_workflow_core_assurance_evidence.rs  generate_workflow_release_foundation.rs  generate_workflow_release_registry.rs  generate_workflow_retirement_checkpoint.rs  generate_workflow_universal_assurance_admission.rs  generate_workflow_universal_assurance_candidate.rs  (+1 more)
crates/forge-core-decisions/src/: catalog.rs  (+32 more)
crates/forge-core-domain-pack-learning-store/: Cargo.toml
crates/forge-core-domain-pack-tcb/: Cargo.toml
crates/forge-core-eval-harness/: Cargo.toml
crates/forge-core-eventlog/: Cargo.toml
crates/forge-core-kernel/: Cargo.toml
crates/forge-core-memory/: Cargo.toml
crates/forge-core-research/: Cargo.toml
crates/forge-core-runtime/: Cargo.toml
crates/forge-core-store/: Cargo.toml
crates/forge-core-validate/: Cargo.toml
crates/forge-core-workflow-governance-tcb/: Cargo.toml
fuzz/: .gitignore  Cargo.toml
fuzz/fuzz_targets/: decode_ocsp_response.rs  decode_prefix.rs  parse_rekor_log_entry.rs  parse_signed_checkpoint.rs
(+2127 files in other folders)
