[workspace]
members = [
  "crates/forge-contract-validator",
  "crates/forge-core-contracts",
  "crates/forge-core-schema",
  "crates/forge-core-cli",
  "crates/forge-core-crypto",
  "crates/forge-core-store",
  "crates/forge-core-memory",
  "crates/forge-core-validate",
  "crates/forge-core-runtime",
  "crates/forge-core-trace",
  "crates/forge-core-graph",
  "crates/forge-core-eval",
  "crates/forge-core-eval-harness",
  "crates/forge-core-engine",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.85"
license = "Apache-2.0"
authors = ["Stable Studio"]
description = "Agent-native protocol core that lets many people and many AI agents build the same product together."
repository = "https://github.com/Stable-Studio/forge-method-rust"
homepage = "https://github.com/Stable-Studio/forge-method-rust"
keywords = ["agent", "protocol", "llm", "workflow", "governance"]
categories = ["command-line-utilities", "development-tools"]

[workspace.dependencies]
asn1-rs = "0.7.2"
base64 = "0.22.1"
ed25519-dalek = { version = "2.2.0", features = ["zeroize"] }
include_dir = "0.7.4"
p256 = { version = "0.13.2", features = ["ecdsa", "pem"] }
rasn = "0.28.13"
rasn-ocsp = "0.28.13"
schemars = "1.2.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
serde_json_canonicalizer = "0.3"
yaml_serde = "0.10.4"

# Dev-only YAML crates used exclusively by R6.3 deserialize benchmarks.
# They are NOT used in production code paths; the project standard is
# `yaml_serde`. Kept here so each bench crate can pull them as dev-dependency
# without duplicating version pins. See `progress/r6_benchmarks.md` (R6.3).
serde_yaml = { version = "0.9", default-features = false }
serde_yml = "0.0.12"
sha1 = "0.10.6"
sha2 = "0.10.9"
sct = "0.7.1"
sigstore-tsa = { version = "0.9.0", default-features = false }
rustls-pki-types = { version = "1.14", default-features = false, features = ["alloc"] }
x509-parser = { version = "0.18.1", features = ["verify"] }
crc32c = "0.6.8"
fs4 = "1.1.0"
# F11 — Regex engine for Risk Audit detectors (pattern matching in source
# code). Std-lib does not ship a regex engine; this is the de-facto Rust choice.
regex = "1.11"
tokio = { version = "1.52.3", default-features = false, features = ["rt", "time"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.23", default-features = false, features = ["std", "registry", "fmt", "json", "env-filter", "ansi"] }

# Crypto hygiene (R5): zeroize wipes secret material on drop; subtle provides
# ConstantTimeEq used by R5.5 for nonce/Merkle-root comparisons to avoid
# timing oracles. Both are already transitive deps via curve25519-dalek /
# elliptic-curve; surfacing them here lets us depend on them explicitly.
zeroize = { version = "1.8", features = ["derive"] }
subtle = "2.6"

[workspace.dependencies.rcgen]
version = "0.14.8"

[workspace.dependencies.proptest]
version = "1.5"

[workspace.dependencies.criterion]
version = "0.5.1"
default-features = false
features = ["plotters", "cargo_bench_support"]

[workspace.dependencies.assert_cmd]
version = "2.0"

# Release profile tuned for the forge-core-cli binary: thin LTO + single
# codegen unit maximises cross-crate inlining for the crypto-heavy paths
# (rekor verify, OCSP decode, ed25519/p256 signatures), panic = abort trims
# the unwind tables, and opt-level = 3 keeps the hot loops vectorised.
# Debug builds and `cargo test` keep the dev profile (untouched here).
[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
panic = "abort"
strip = "symbols"
