[package]
name = "forge-core-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true

[features]
default = []
# The P6d public-journey protocol proof takes tens of minutes and is intentionally
# scheduled once in CI instead of being duplicated in every platform matrix job.
expensive-p6d-e2e = []

[[bin]]
name = "forge-core"
path = "src/main.rs"

[dependencies]
forge-core-authority = { path = "../forge-core-authority" }
forge-core-command-surface = { path = "../forge-core-command-surface" }
forge-core-contracts = { path = "../forge-core-contracts" }
forge-core-crypto = { path = "../forge-core-crypto" }
forge-core-eval = { path = "../forge-core-eval" }
forge-core-eval-harness = { path = "../forge-core-eval-harness" }
forge-core-decisions = { path = "../forge-core-decisions" }
forge-core-domain-pack-tcb = { path = "../forge-core-domain-pack-tcb" }
forge-core-domain-pack-learning-store = { path = "../forge-core-domain-pack-learning-store" }
forge-core-graph = { path = "../forge-core-graph" }
forge-core-governance = { path = "../forge-core-governance" }
forge-core-memory = { path = "../forge-core-memory" }
forge-core-protocol-mcp = { path = "../forge-core-protocol-mcp" }
forge-core-research = { path = "../forge-core-research" }
forge-core-kernel = { path = "../forge-core-kernel" }
forge-core-store = { path = "../forge-core-store" }
forge-core-trace = { path = "../forge-core-trace" }
forge-core-validate = { path = "../forge-core-validate" }
asn1-rs.workspace = true
base64.workspace = true
ed25519-dalek.workspace = true
getrandom.workspace = true
p256.workspace = true
rasn.workspace = true
rasn-ocsp.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_json_canonicalizer.workspace = true
yaml_serde.workspace = true
sha1.workspace = true
sha2.workspace = true
sct.workspace = true
sigstore-tsa.workspace = true
rustls-pki-types.workspace = true
x509-parser.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "process"] }
tracing.workspace = true
tracing-subscriber.workspace = true

[dev-dependencies]
rcgen.workspace = true
proptest.workspace = true
assert_cmd.workspace = true
rmcp = { workspace = true, features = ["client", "transport-child-process"] }
