[package]
name = "forge-core-contracts"
version.workspace = true
edition.workspace = true

[dependencies]
schemars.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_json_canonicalizer.workspace = true
sha2.workspace = true

[dev-dependencies]
serde_json.workspace = true
yaml_serde.workspace = true
