[package]
name = "forge-core-crypto"
version.workspace = true
edition.workspace = true

[dependencies]
forge-core-contracts = { path = "../forge-core-contracts" }
asn1-rs.workspace = true
base64.workspace = true
ed25519-dalek.workspace = true
p256.workspace = true
rasn.workspace = true
rasn-ocsp.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_json_canonicalizer.workspace = true
serde_yaml.workspace = true
sha1.workspace = true
sha2.workspace = true
sct.workspace = true
sigstore-tsa.workspace = true
rustls-pki-types.workspace = true
x509-parser.workspace = true

[dev-dependencies]
rcgen.workspace = true
proptest.workspace = true
