[package]
name = "forge-core-decisions"
version.workspace = true
edition.workspace = true

[dependencies]
forge-core-contracts = { path = "../forge-core-contracts" }
include_dir.workspace = true
serde.workspace = true
yaml_serde.workspace = true

[dev-dependencies]
forge-core-validate = { path = "../forge-core-validate" }
serde_json.workspace = true
yaml_serde.workspace = true
