[package]
name = "forge-core-domain-pack-tcb"
version.workspace = true
edition.workspace = true

[dependencies]
forge-core-authority = { path = "../forge-core-authority" }
forge-core-contracts = { path = "../forge-core-contracts" }
forge-core-decisions = { path = "../forge-core-decisions" }
forge-core-store = { path = "../forge-core-store" }
getrandom.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_json_canonicalizer.workspace = true
sha2.workspace = true
yaml_serde.workspace = true

[dev-dependencies]
ed25519-dalek.workspace = true
