[package]
name = "forge-core-eval-harness"
version.workspace = true
edition.workspace = true

[dependencies]
forge-core-contracts = { path = "../forge-core-contracts" }
forge-core-eval = { path = "../forge-core-eval" }
forge-core-validate = { path = "../forge-core-validate" }
serde.workspace = true
serde_json.workspace = true
yaml_serde.workspace = true
