[package]
name = "forge-core-eventlog"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "Trusted closed-stream EventLog runtime for Forge Memory, Research, and Governance PEPs."

[dependencies]
forge-core-contracts = { path = "../forge-core-contracts" }
forge-core-store = { path = "../forge-core-store" }
schemars.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true

[dev-dependencies]
proptest.workspace = true
