[package]
name = "forge-core-kernel"
version.workspace = true
edition.workspace = true

[features]
# `dangerous-bypass` enables [`RuntimeOperationExecutionContext::dangerous_unchecked`],
# the rustls-style explicit gate-bypass. It must NEVER be enabled in a release
# binary; it exists for tests/legacy callers that genuinely do not run gates.
# Keeping it a distinct feature makes any bypass visible in the diff AND the
# feature config, never silent. See V2.C.
dangerous-bypass = []

[dependencies]
forge-core-authority = { path = "../forge-core-authority" }
forge-core-contracts = { path = "../forge-core-contracts" }
forge-core-decisions = { path = "../forge-core-decisions" }
forge-core-store = { path = "../forge-core-store" }
forge-core-workflow-governance-tcb = { path = "../forge-core-workflow-governance-tcb" }
forge-core-trace = { path = "../forge-core-trace" }
forge-core-validate = { path = "../forge-core-validate" }
include_dir.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_json_canonicalizer.workspace = true
sha2.workspace = true
tracing.workspace = true
yaml_serde.workspace = true

[dev-dependencies]
ed25519-dalek.workspace = true
serde_json.workspace = true
yaml_serde.workspace = true
sha2.workspace = true
