[package]
name = "forge-core-memory"
version.workspace = true
edition.workspace = true

[dependencies]
forge-core-contracts = { path = "../forge-core-contracts" }
forge-core-eventlog = { path = "../forge-core-eventlog" }
forge-core-store = { path = "../forge-core-store" }
serde.workspace = true
serde_json.workspace = true
schemars.workspace = true
sha2.workspace = true
tracing.workspace = true

[dev-dependencies]
proptest.workspace = true
