[package]
name = "forge-core-research"
version.workspace = true
edition.workspace = true

[dependencies]
forge-core-eventlog = { path = "../forge-core-eventlog" }
forge-core-validate = { path = "../forge-core-validate" }
schemars.workspace = true
serde.workspace = true
yaml_serde.workspace = true

[dev-dependencies]
forge-core-contracts = { path = "../forge-core-contracts" }
