[package]
name = "forge-core-runtime"
version.workspace = true
edition.workspace = true

[dependencies]
forge-core-contracts = { path = "../forge-core-contracts" }
forge-core-store = { path = "../forge-core-store" }
forge-core-validate = { path = "../forge-core-validate" }
serde.workspace = true
tracing.workspace = true

[dev-dependencies]
yaml_serde.workspace = true
sha2.workspace = true
