[package]
name = "forge-core-store"
version.workspace = true
edition.workspace = true

[dependencies]
forge-core-contracts = { path = "../forge-core-contracts" }
forge-core-trace = { path = "../forge-core-trace" }
forge-core-validate = { path = "../forge-core-validate" }
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
sha2.workspace = true
crc32c.workspace = true
fs4.workspace = true
tracing.workspace = true

[dev-dependencies]
proptest.workspace = true
criterion.workspace = true

[[bench]]
name = "claim_wal"
harness = false

[[bench]]
name = "reference_index"
harness = false
