[package]
name = "forge-core-store"
version.workspace = true
edition.workspace = true

[dependencies]
forge-core-contracts = { path = "../forge-core-contracts" }
forge-core-trace = { path = "../forge-core-trace" }
forge-core-validate = { path = "../forge-core-validate" }
serde.workspace = true
serde_json.workspace = true
serde_json_canonicalizer.workspace = true
yaml_serde.workspace = true
sha2.workspace = true
crc32c.workspace = true
fs4.workspace = true
tracing.workspace = true

[dev-dependencies]
proptest.workspace = true
criterion.workspace = true

[features]
# Exposes internal WAL parsers for the fuzz/ workspace. NOT enabled by
# default and NOT part of the stable API surface.
default = []
fuzz = []

[[bench]]
name = "claim_wal"
harness = false

[[bench]]
name = "reference_index"
harness = false
