[package]
name = "forge-core-validate"
version.workspace = true
edition.workspace = true

[dependencies]
forge-core-contracts = { path = "../forge-core-contracts" }
serde.workspace = true
serde_yaml.workspace = true
tracing.workspace = true

[dev-dependencies]
serde.workspace = true
serde_yaml.workspace = true
