[package]
name = "forge-core-validate"
version.workspace = true
edition.workspace = true

[dependencies]
forge-core-contracts = { path = "../forge-core-contracts" }
serde.workspace = true
yaml_serde.workspace = true
tracing.workspace = true
regex.workspace = true

[dev-dependencies]
serde.workspace = true
yaml_serde.workspace = true
serde_yaml.workspace = true
serde_yml.workspace = true
criterion.workspace = true
forge-core-contracts = { path = "../forge-core-contracts" }

[[bench]]
name = "yaml_deserialize"
harness = false
